--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,9 +16,9 @@ links:
         url: /permalink
       - title: Form Tutorial
         url: /permalink
-      - title: Partnership Checklist
+      - title: Submission Checklist
         url: /permalink
-      - title: Submit now
+      - title: Submission Form
         url: /permalink
   - title: Get Support
     url: /permalink
