--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,5 +2,6 @@ collections:
   take-action:
     output: true
     order:
+      - Submission Checklist.md
       - Tutorial.md
       - Partner Us.md
