--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,3 +24,5 @@ links:
         url: /permalink
       - title: Contact Us
         url: /permalink
+  - title: Take Action
+    collection: take-action
