--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,45 @@
-title: Title
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+title: Partners First-Stop
+url: https://www.sg
 favicon: /images/favicon-isomer.ico
-
-# Site colors
 colors:
-  primary-color: '#6031b6'
-  secondary-color: '#4372d6'
+  primary-color: "#4a4a4a"
+  secondary-color: "#d0021b"
   media-colors:
     - title: media-color-one
-      color: '#49759a'
+      color: "#9b9b9b"
     - title: media-color-two
-      color: '#744d9f'
+      color: "#a10215"
     - title: media-color-three
-      color: '#00838f'
+      color: "#000000"
     - title: media-color-four
-      color: '#00838f'
+      color: "#ffffff"
     - title: media-color-five
-      color: '#00838f'
-
+      color: "#f7011f"
 description: An Isomer site of the Singapore Government
-
-##################################################################################################################
-# Everything below this line is Isomer-specific configuration. There should not be a need to edit these settings #
-##################################################################################################################
 permalink: none
 baseurl: ""
-exclude: [travis-script.js, .travis.yml, README.md, package.json, package-lock.json, node_modules, vendor/bundle/, vendor/cache/, vendor/gems/, vendor/ruby/, Gemfile, Gemfile.lock]
-include: [_redirects]
+exclude:
+  - travis-script.js
+  - .travis.yml
+  - README.md
+  - package.json
+  - package-lock.json
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - Gemfile
+  - Gemfile.lock
+include:
+  - _redirects
 defaults:
   - scope:
       path: ""
     values:
-      layout: "page"
-# Custom CSS file path
-custom_css_path: "/misc/custom.css"
-custom_print_css_path: "/assets/css/print.css"
+      layout: page
+custom_css_path: /misc/custom.css
+custom_print_css_path: /assets/css/print.css
 paginate: 12
 remote_theme: isomerpages/isomerpages-template@next-gen
 safe: false
@@ -46,3 +51,8 @@ plugins:
   - jekyll-remote-theme
 staging: https://staging.d2zbhvw0ev634k.amplifyapp.com
 prod: https://master.d2zbhvw0ev634k.amplifyapp.com
+shareicon: /images/isomer-logo.svg
+is_government: false
+facebook-pixel: ""
+google_analytics: ""
+linkedin-insights: ""
