--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,6 @@ links:
       - title: FAQs
         url: /permalink
       - title: List of Funds
-        url: /permalink
+        url: https://www.sg
       - title: Contact Us
         url: /permalink
