--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ links:
     sublinks:
       - title: FAQs
         url: /permalink
-      - title: List of Funds
+      - title: Resources
         url: https://www.sg
       - title: Contact Us
         url: /permalink
