{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1720"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -4,5 +4,5 @@ collections:
     order:
       - Submission Form.md
       - Submission Checklist.md
-      - Tutorial.md
+      - Explainer Video.md
       - Partner Us.md
