{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1720"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - Partner Us Now.md
+      - Sign up to partner us.md
       - Explainer Video.md
       - Checklist.md
