{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1720"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -3,5 +3,5 @@ collections:
     output: true
     order:
       - Sign up to partner us.md
-      - Explainer Video.md
+      - Explainer video.md
       - Checklist.md
