--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - Sign up to partner us.md
+      - Submit your partnership idea.md
       - Explainer video.md
       - Checklist.md
