{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"1720"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Singapore Partnerships Office
 url: https://www.sg
-favicon: /images/favicon-isomer.ico
+favicon: /images/sgt_icon_logo.ico
 colors:
   primary-color: "#4a4a4a"
   secondary-color: "#d0021b"
