{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"1720"}

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ plugins:
   - jekyll-remote-theme
 staging: https://staging.d2zbhvw0ev634k.amplifyapp.com
 prod: https://master.d2zbhvw0ev634k.amplifyapp.com
-shareicon: /images/sgt_sgpo_logo.svg
+shareicon: /images/sgt_sgpo_logo_3-01.svg
 is_government: false
 facebook-pixel: ""
 google_analytics: ""
