--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,9 @@ logo: /images/sgt_sgpo_logo_4.png
 links:
   - title: About
     collection: about
-  - title: Get Inspired
-    url: /example-page/
   - title: Take action
     collection: take-action
+  - title: Get Inspired
+    url: /example-page/
+  - title: Get Supported
+    collection: get-support
