--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ links:
   - title: Take action
     collection: take-action
   - title: Get Inspired
-    url: /example-page/
+    url: /get-inspired
   - title: Get Supported
     collection: get-support
