--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,3 +13,5 @@ links:
         url: /faqs
       - title: Contact Us
         url: /contact-us
+      - title: Get Funded
+        url: /get-funded
