{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1720"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - Submit your partnership idea.md
+      - Submit your partnership proposal.md
       - Explainer video.md
       - Checklist.md
