{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1720"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/SGPO logos/sg-gov-partnership-office-logo.png
+logo: /images/Logos/white-spacer.png
 links:
   - title: About
     collection: about
