--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,7 @@ collections:
   take-action:
     output: true
     order:
+      - Example Title.md
       - Submit your partnership proposal.md
       - Explainer video.md
       - Checklist.md
