{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"1720"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Singapore Partnerships Office
+title: Singapore Government Partnerships Office
 url: https://www.sg
 favicon: /images/sgt_icon_logo.ico
 colors:
