{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1719"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,7 +2,7 @@ collections:
   take-action:
     output: true
     order:
-      - Submit your partnership proposal.md
+      - Take Action Today.md
       - Explainer video.md
       - Checklist.md
       - Volunteering Opportunities.md
