--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -3,6 +3,6 @@ collections:
     output: true
     order:
       - Take Action Today.md
-      - Explainer video.md
+      - 3 steps to submit a proposal.md
       - Checklist.md
       - Volunteering Opportunities.md
