{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,5 +2,6 @@ collections:
   take-action:
     output: true
     order:
+      - Existing Opportunities/Existing Opportunities.md
       - Existing Opportunities/.keep
       - Take Action Today.md
