--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - Take Action Today.md
+      - Submit a proposal.md
       - Existing Opportunities/.keep
       - Existing Opportunities/Existing Opportunities.md
