{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,5 +2,6 @@ collections:
   take-action:
     output: true
     order:
+      - Useful resources.md
       - Submit a proposal.md
       - Partners portal.md
