{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -4,4 +4,4 @@ collections:
     order:
       - Submit a proposal.md
       - Partners portal.md
-      - Useful Information.md
+      - Useful information.md
