{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - Submit a proposal.md
+      - How to submit a proposal.md
       - Partners portal.md
       - Useful information.md
