{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1720"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -4,4 +4,4 @@ collections:
     order:
       - How to submit a proposal.md
       - Partners Portal.md
-      - Useful information.md
+      - Useful Information.md
