--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - How to submit a proposal.md
+      - How to Submit a Proposal.md
       - Partners Portal.md
       - Useful Information.md
