{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - How to Submit a Proposal.md
+      - How to Share a Proposal.md
       - Partners Portal.md
       - Useful Information.md
