--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,6 @@ collections:
   take-action:
     output: true
     order:
-      - How to Share a Proposal.md
+      - Starting Guide.md
       - Partners Portal.md
       - Useful Information.md
