--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ colors:
     - title: media-color-four
       color: "#ffffff"
     - title: media-color-five
-      color: "#f7011f"
+      color: "#dc011b"
 description: An Isomer site of the Singapore Government
 permalink: none
 baseurl: ""
