--- a/_get-inspired/collection.yml
+++ b/_get-inspired/collection.yml
@@ -2,5 +2,5 @@ collections:
   get-inspired:
     output: true
     order:
-      - Get Inspired.md
+      - Feature Stories.md
       - Alliances for Action.md
