{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1720"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,6 @@ links:
   - title: Take action
     collection: take-action
   - title: Get Inspired
-    url: /get-inspired
+    collection: get-inspired
   - title: About
     collection: about
