--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/Logos/sgpo_logo_4.png
+logo: /images/SGPO logos/sgpo_logo_beta_v1.png
 links:
   - title: Take action
     collection: take-action
