--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Get Started.md
       - Partners Portal v2.md
       - Frequently Asked Questions/.keep
-      - Frequently Asked Questions/Frequently Asked Questions.md
+      - Frequently Asked Questions/About Singapore Government Partnerships
+        Office.md
       - Partners Portal.md
       - Useful Information.md
