--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -4,6 +4,7 @@ collections:
     order:
       - Get Started.md
       - Partners Portal v2.md
+      - Frequently Asked Questions/Submitting a Partnerships Proposal.md
       - Frequently Asked Questions/.keep
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
