{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -8,5 +8,5 @@ collections:
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
       - Frequently Asked Questions/Submitting a Partnerships Proposal.md
-      - Partners Portal.md
+      - (Delink) Partners Portal.md
       - Useful Information.md
