--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Get Started.md
-      - Partners Portal v2.md
+      - Partners Portal.md
       - Frequently Asked Questions/.keep
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
