{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -4,6 +4,8 @@ collections:
     order:
       - Get Started.md
       - Partners Portal.md
+      - Frequently Asked Questions/About Singapore Government Partnerships
+        Office.md
       - Frequently Asked Questions/.keep
       - (Delink) Partners Portal.md
       - Useful Information.md
