--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,7 @@ collections:
   take-action:
     output: true
     order:
+      - Partners Portal/.keep
       - Get Started.md
       - Partners Portal.md
       - Frequently Asked Questions/.keep
