--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,7 @@ collections:
   take-action:
     output: true
     order:
+      - Partners Portal/Funding.md
       - Partners Portal/Partnerships.md
       - Partners Portal/Partners Portal.md
       - Partners Portal/.keep
