{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -9,6 +9,7 @@ collections:
       - Partners Portal/Funding.md
       - Partners Portal/Volunteering.md
       - Partners Portal/Other Resources.md
+      - Frequently Asked Questions/List of Topics for Partnerships.md
       - Frequently Asked Questions/.keep
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
