--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -13,4 +13,4 @@ collections:
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
       - Frequently Asked Questions/Submitting a Partnerships Proposal.md
-      - Frequently Asked Questions/List of Topics for Partnerships.md
+      - Frequently Asked Questions/List of Topics for Government Partnerships.md
