{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Get Started.md
       - Partners Portal/.keep
-      - Partners Portal/Partners Portal.md
+      - Partners Portal/Introduction to Partners Portal.md
       - Partners Portal/Partnerships.md
       - Partners Portal/Funding.md
       - Partners Portal/Volunteering.md
