{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"2882"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Singapore Government Partnerships Office
-url: https://www.sg
+url: https://www.sgpo.gov.sg
 favicon: /images/sgt_icon_logo.ico
 colors:
   primary-color: "#4a4a4a"
