{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -13,4 +13,4 @@ collections:
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
       - Frequently Asked Questions/Submitting a Partnerships Proposal.md
-      - Frequently Asked Questions/List of Topics for Government Partnerships.md
+      - Frequently Asked Questions/Topics for Partnership with the Government.md
