{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -2,6 +2,7 @@ collections:
   take-action:
     output: true
     order:
+      - Share Your Proposal.md
       - Get Started.md
       - Partners Portal/.keep
       - Partners Portal/Introduction to Partners Portal.md
