--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -13,5 +13,5 @@ collections:
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
       - Frequently Asked Questions/Submitting a Partnerships Proposal.md
-      - Frequently Asked Questions/Topics for Partnership with the Government.md
+      - Frequently Asked Questions/Areas for Partnership with the Government.md
       - Share Your Proposal.md
