{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2882"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -12,6 +12,6 @@ collections:
       - Frequently Asked Questions/.keep
       - Frequently Asked Questions/About Singapore Government Partnerships
         Office.md
-      - Frequently Asked Questions/Sharing a Partnerships Proposal.md
+      - Frequently Asked Questions/Sharing a Partnership Proposal.md
       - Frequently Asked Questions/Areas for Partnership with the Government.md
       - Share Your Proposal.md
