{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"2882"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/SGPO logos/sgpo_logo_beta_v4.png
+logo: /images/sgpo_logo_beta_v5.png
 links:
   - title: Take action
     collection: take-action
