--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ colors:
       color: "#ffffff"
     - title: media-color-five
       color: "#dc011b"
-description: An Isomer site of the Singapore Government
+description: Website of the Singapore Government Partnerships Office.
 permalink: none
 baseurl: ""
 exclude:
