--- a/_get-inspired/collection.yml
+++ b/_get-inspired/collection.yml
@@ -2,5 +2,6 @@ collections:
   get-inspired:
     output: true
     order:
+      - Stories Archive.md
       - Feature Stories.md
       - Alliances for Action.md
