--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,7 @@
 show_reach: true
 faq: /take-action/frequently-asked-questions/sgpo/
-social_media: {}
+social_media:
+  facebook: https://www.facebook.com/oursingapore
+  youtube: https://www.youtube.com/@oursg
 feedback: https://form.gov.sg/65a74bb37d27490011d6b231
 contact_us: /contact-us/
