{"message":"Update file: collection.yml","userId":"1720","fileName":"collection.yml"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Get Started.md
+      - Partners Portal/For Grounds Ups and Businesses.md
       - Partners Portal/.keep
       - Partners Portal/Introduction to Partners Portal.md
       - Partners Portal/Partnerships.md
