--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Partners Portal/For Individuals.md
       - Partners Portal/For Grounds Ups and Businesses.md
       - Partners Portal/Funding.md
-      - Partners Portal/Volunteering.md
+      - Partners Portal/Volunteering and Giving.md
       - Partners Portal/Other Resources.md
       - Frequently Asked Questions/.keep
       - Frequently Asked Questions/About Singapore Government Partnerships
