{"message":"Update file: collection.yml","userId":"1720","fileName":"collection.yml"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Get Started.md
       - Partners Portal/.keep
       - Partners Portal/Introduction to Partners Portal.md
-      - Partners Portal/Partnerships.md
+      - Partners Portal/Partnerships and Engagements.md
       - Partners Portal/For Individuals.md
       - Partners Portal/For Grounds Ups and Businesses.md
       - Partners Portal/Funding.md
