{"message":"Update file: collection.yml","userId":"1720","fileName":"collection.yml"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -7,7 +7,8 @@ collections:
       - Partners Portal/Introduction to Partners Portal.md
       - Partners Portal/Partnerships and Engagements.md
       - Partners Portal/Partnerships and Engagements (For Individuals).md
-      - Partners Portal/For Grounds Ups and Businesses.md
+      - Partners Portal/Partnerships and Engagements (For Grounds Ups and
+        Businesses).md
       - Partners Portal/Funding.md
       - Partners Portal/Volunteering and Giving.md
       - Frequently Asked Questions/.keep
