{"message":"Update file: collection.yml","userId":"1720","fileName":"collection.yml"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Partners Portal/Introduction to Partners Portal.md
       - Partners Portal/Partnerships and Engagements (For Individuals).md
       - Partners Portal/Partnerships and Engagements (For Grounds Ups and
-        Businesses).md
+        Organisations).md
       - Partners Portal/Funding.md
       - Partners Portal/Volunteering and Giving.md
       - Frequently Asked Questions/.keep
