{"message":"Update file: collection.yml","userId":"1720","fileName":"collection.yml"}

--- a/_take-action/collection.yml
+++ b/_take-action/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Partners Portal/Partnerships and Engagements (For Individuals).md
       - Partners Portal/Partnerships and Engagements (For Grounds Ups and
         Organisations).md
-      - Partners Portal/Funding.md
+      - Partners Portal/Funding and Resources.md
       - Partners Portal/Volunteering and Giving.md
       - Frequently Asked Questions/.keep
       - Frequently Asked Questions/About Singapore Government Partnerships
