{"message":"Update file: collection.yml","userId":"1720","fileName":"collection.yml"}

--- a/_get-inspired/collection.yml
+++ b/_get-inspired/collection.yml
@@ -2,6 +2,7 @@ collections:
   get-inspired:
     output: true
     order:
+      - Example Title.md
       - Feature Stories.md
       - Alliances for Action.md
       - Stories Archive.md
