{"message":"Update file: navigation.yml","userId":"1720","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,5 @@ links:
     collection: get-inspired
   - title: About
     collection: about
+  - title: Discover Your Role
+    url: https://www.stationery-personality-quiz.com/
