{"message":"Update file: navigation.yml","userId":"1720","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/sgpo_logo_beta_v5.png
+logo: /images/SGPO logos/SGPO_logo_FOR_WEBSITE_13June25.png
 links:
   - title: Take action
     collection: take-action
